build/errors/testdata/unused-mutable.q
main() {
	mut a = 1
	let b = a
}
